# vptree-draw

./: CMakeLists.txt  LICENSE  Makefile  README.md  bregman.h  bvhbox.h  bvhsphere.h  bvptree.h  compare.cpp  draw.h  geo.h  lambert.h  main.cpp  poster.cpp  simple_svg_1.0.0.hpp  test.cpp  vptree.h  vptree.hpp
.github/workflows/: cmake.yml
CavalierContours/include/cavc/: plinesegment.hpp
data/: klballs.ipynb
src/: CMakeLists.txt  bregman.h  bvptree.h  bvptree.old.h  compare.cpp  draw.h  kdtree.h  quadtree.h  simple_svg_extend.h
test/: test-bregman.cpp  test-contour.cpp  test-minisphere.cpp
